# glaredb_next

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  hybrid.md  mod.rs  notes.md  query-graph.md  rayexec-k8s.yaml  rustfmt.toml  sql.md
.github/actions/protoc/: action.yaml
.github/workflows/: ci.yaml  release.yaml
crates/fmtutil/src/: lib.rs
crates/logutil/src/: lib.rs
crates/parquet/: Cargo.toml
crates/parquet/src/: data_type.rs  errors.rs  lib.rs  value_decoder.rs  value_encoder.rs
crates/parquet_redux/: Cargo.toml  regen.sh
crates/parquet_redux/src/: compression.rs  lib.rs  page.rs  physical_type.rs  statistics.rs  thrift_ext.rs  thrift_gen.rs  types.rs
crates/rayexec_arrow_ipc/: gen_ipc.sh
crates/rayexec_arrow_ipc/src/: File.rs  Message.rs  Schema.rs  SparseTensor.rs  Tensor.rs  lib.rs
crates/rayexec_bin/: Cargo.toml
crates/rayexec_bin/src/: editor.rs  main.rs  shell.rs  vt100.rs
crates/rayexec_bullet/: Cargo.toml
crates/rayexec_csv/: Cargo.toml
crates/rayexec_delta/: Cargo.toml
crates/rayexec_execution/: Cargo.toml
crates/rayexec_io/: Cargo.toml
crates/rayexec_parquet/: Cargo.toml
crates/rayexec_postgres/: Cargo.toml
crates/rayexec_postgres/slts/: attach.slt
crates/rayexec_postgres/src/: lib.rs  read_postgres.rs
crates/rayexec_proto/: Cargo.toml  build.rs
crates/rayexec_python/: Cargo.toml
crates/rayexec_rt_native/: Cargo.toml
crates/rayexec_server/: Cargo.toml
crates/rayexec_server/src/: handlers.rs  main.rs
crates/rayexec_shell/: Cargo.toml
crates/rayexec_slt/: Cargo.toml
crates/rayexec_sqltest/: Cargo.toml
crates/rayexec_wasm/: Cargo.toml
crates/rayexec_wasm/src/: errors.rs  filesystem.rs  http.rs  lib.rs  runtime.rs  session.rs  shell.rs  time.rs  tracing.rs
scratch_queries/: q16_tpch.sql  q18_tpch.sql  q1_tpch.sql  q2_tpch.sql  q3_tpch.sql  q5_tpch.sql  q6_tpch.sql  q7_tpch.sql  q8_tpch.sql  q9_tpch.sql
scripts/: format.sh  install_protoc_linux.sh
slt/clickbench/: q03.slt  q08.slt  q13.slt  q35.slt
slt/csv/: copy_to.slt  describe.slt  read_simple.slt  userdata.slt
slt/delta/: simple.slt
slt/hybrid/: remote_attach.slt
slt/parquet/: copy_to.slt  describe.slt  read_parquet.slt  read_parquet_http.slt
slt/standard/: cross_join.slt
slt/tpch/: describe_files.slt  q01.slt  q02.slt  q03.slt  q04.slt  q06.slt  q07.slt  q08.slt  q09.slt  q1.slt  q10.slt  q11.slt  q13.slt  q14.slt  q15.slt  q17.slt  q18.slt  q19.slt  q2.slt  q20.slt  q21.slt  q22.slt  q3.slt  q4.slt  q5.slt  q9.slt
test_bin/: Cargo.toml  integration_register_all_datasources.rs  integration_slt_csv.rs  integration_slt_delta.rs  integration_slt_hybrid.rs  integration_slt_parquet.rs  integration_slt_postgres.rs  integration_slt_standard.rs  integration_slt_tpch.rs
(+693 files in other folders)
