[package]
name = "rayexec_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rayexec_execution = { path = '../rayexec_execution' }
rayexec_bullet = { path = '../rayexec_bullet' }
rayexec_error = { path = '../rayexec_error' }
wasm-bindgen = "0.2.92"

getrandom = { version = "0.2", features = ["js"] }
