[package]
name = "rayexec_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rayexec_execution = { path = '../rayexec_execution' }
rayexec_bullet = { path = '../rayexec_bullet' }
rayexec_error = { path = '../rayexec_error' }
futures = { workspace = true }
web-sys = { version = "0.3.69", features = ["console"] }
tracing = { workspace = true }
tracing-subscriber = {version = "0.3", features = ["std", "fmt", "json", "env-filter"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
